# jsonable

./: .gitignore  FromJsonable.hpp  Jsonable.hpp  JsonableBase.hpp  JsonableImpl.inl  LICENSE  README.md  ToJsonable.hpp
samples/: ArrayContextTest.hpp  BasicUsageExample.hpp  BeginEndNestedExample.hpp  InheritanceExample.hpp  NullKeyHandlingDemo.hpp  README_BeginEnd.md  TypeSafetyPrinciples.md  UnifiedApiDemo.hpp
unittest/: ArrayTest.cpp  BasicTypeTest.cpp  CMakeLists.txt  ErrorHandlingTest.cpp  InheritanceTest.cpp  JsonableNewTest.cpp  JsonableTest.cpp  MultiInheritanceTest.hpp  QuickInlineTest.cpp  SimpleCompileTest.cpp  TestJsonable.hpp  run_tests_nopause.bat  run_unittest.sh
